--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -4,4 +4,5 @@
     <dimen name="title_text_size">30sp</dimen>
     <dimen name="description_top_margin">150dp</dimen>
     <dimen name="description_text_size">15sp</dimen>
+    <dimen name="image_size">100dp</dimen>
 </resources>
