--- a/app/src/main/res/layout/activity_movie_list.xml
+++ b/app/src/main/res/layout/activity_movie_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    tools:context=".activity.ItemRecyclerActivity">
+    tools:context=".activity.MovieListActivity">
 
     <TextView
         android:id="@+id/list_title"
