--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -5,4 +5,5 @@
     <dimen name="description_top_margin">150dp</dimen>
     <dimen name="description_text_size">15sp</dimen>
     <dimen name="image_size">100dp</dimen>
+    <dimen name="description_horizontal_margin">50dp</dimen>
 </resources>
