--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -6,4 +6,7 @@
     <dimen name="description_text_size">15sp</dimen>
     <dimen name="image_size">100dp</dimen>
     <dimen name="description_horizontal_margin">50dp</dimen>
+    <dimen name="error_dialog_margin_horizontal">100dp</dimen>
+    <dimen name="error_dialog_margin_vertical">290dp</dimen>
+    <dimen name="error_title_size">20sp</dimen>
 </resources>
