--- a/app/src/main/res/layout/error_dialog.xml
+++ b/app/src/main/res/layout/error_dialog.xml
@@ -30,6 +30,7 @@
 
     <Button
         android:id="@+id/confirm_button"
+        android:backgroundTint="@color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/container_margin"
