--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="container_margin">15dp</dimen>
+    <dimen name="layout_height">0dp</dimen>
+
     <dimen name="title_text_size">30sp</dimen>
     <dimen name="description_top_margin">150dp</dimen>
     <dimen name="description_text_size">15sp</dimen>
     <dimen name="image_size">100dp</dimen>
     <dimen name="description_horizontal_margin">50dp</dimen>
+
     <dimen name="error_dialog_margin_horizontal">100dp</dimen>
     <dimen name="error_dialog_margin_vertical">280dp</dimen>
     <dimen name="error_title_size">20sp</dimen>
