--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="@dimen/container_margin"
-    tools:context=".activity.MainActivity">
+    tools:context=".presentation.activity.MainActivity">
 
     <TextView
         android:id="@+id/title"
