--- a/app/src/main/res/layout/error_dialog.xml
+++ b/app/src/main/res/layout/error_dialog.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginHorizontal="@dimen/error_dialog_margin_horizontal"
-    android:layout_marginVertical="@dimen/error_dialog_margin_vertical"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_marginVertical="@dimen/error_dialog_margin_vertical">
 
     <TextView
         android:id="@+id/error_title"
@@ -13,20 +13,20 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/container_margin"
         android:text="@string/error_dialog_title"
-        app:layout_constraintTop_toTopOf="parent"
         android:textSize="@dimen/error_title_size"
         app:layout_constraintStart_toStartOf="parent"
-        tools:text="Error"/>
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Error" />
 
     <TextView
         android:id="@+id/error_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/container_margin"
-        app:layout_constraintTop_toBottomOf="@id/error_title"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:text="Error Message"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/error_title"
+        tools:text="Error Message" />
 
     <Button
         android:id="@+id/confirm_button"
@@ -34,9 +34,9 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/container_margin"
         android:text="@string/error_dialog_button"
-        app:layout_constraintTop_toBottomOf="@id/error_message"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/error_message" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
